--- a/web/app/languages/themes/twentysixteen-fr_FR.po
+++ b/web/app/languages/themes/twentysixteen-fr_FR.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Themes - Twenty Sixteen package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2020-12-09 22:13:14+0000\n"
+"PO-Revision-Date: 2022-01-26 00:03:02+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -44,6 +44,10 @@ msgstr "Twenty Sixteen rendra votre WordPress magnifique partout."
 msgid "Large Blockquote"
 msgstr "Grande citation"
 
+#: inc/block-patterns.php:73
+msgid "The theme features a harmonious fluid grid using a mobile-first approach. The layout is a modern take on the horizontal masthead with an optional right sidebar."
+msgstr "Le thème présente une fonctionnalité fluide harmonieuse utilisant une approche axée sur le mobile. La mise en page est une version moderne de la barre d’administration horizontale avec une colonne latérale droite facultative."
+
 #: inc/block-patterns.php:67
 msgid "Twenty Sixteen will make your WordPress website look beautiful everywhere. Take advantage of its custom color options and beautiful default color schemes."
 msgstr "Twenty Sixteen rendra votre site WordPress magnifique partout. Profitez de ses options de couleurs personnalisées et de ses magnifiques jeux de couleurs par défaut."
@@ -55,6 +59,10 @@ msgstr "Grand titre avec texte à deux colonnes"
 #: inc/block-patterns.php:38
 msgid "Twenty Sixteen will make your WordPress website look beautiful everywhere. Take advantage of custom color options, beautiful default color schemes, a harmonious fluid grid using a mobile-first approach, and impeccable polish in every detail."
 msgstr "Twenty Sixteen rendra votre site WordPress magnifique partout. Bénéficiez d’options de couleurs personnalisées, de superbes palettes de couleurs par défaut, d’une grille fluide harmonieuse utilisant une approche prioritaire pour appareils mobile et d’un polissage impeccable dans les moindres détails."
+
+#: inc/block-patterns.php:35
+msgid "Twenty Sixteen is a modern take on the horizontal masthead with an optional right sidebar. It works perfectly for WordPress websites and blogs."
+msgstr "Twenty Sixteen est une version moderne de la barre d’administration horizontale avec une colonne latérale droite facultative. Cela fonctionne parfaitement pour les sites et les blogs WordPress."
 
 #: inc/block-patterns.php:28
 msgid "Large heading with short description"
@@ -105,16 +113,10 @@ msgid "Dark Gray"
 msgstr "Gris foncé"
 
 #. translators: %s: Post title.
-#. translators: %s: Post title.
 #: inc/template-tags.php:195 template-parts/content.php:29
 msgid "Continue reading<span class=\"screen-reader-text\"> \"%s\"</span>"
 msgstr "Continuer la lecture<span class=\"screen-reader-text\"> de &laquo;&nbsp;%s&nbsp;&raquo;</span>"
 
-#. translators: %s: Post title.
-#. translators: %s: Post title.
-#. translators: %s: Post title.
-#. translators: %s: Post title.
-#. translators: %s: Post title.
 #. translators: %s: Post title.
 #: image.php:88 template-parts/content-page.php:39
 #: template-parts/content-search.php:28 template-parts/content-search.php:43
@@ -174,7 +176,7 @@ msgstr "Désolé, mais rien ne correspond à votre recherche. Veuillez réessaye
 #. translators: %s: Post editor URL.
 #: template-parts/content-none.php:22
 msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
-msgstr "Prêt(e) à publier votre premier article&nbsp;? <a href=\"%1$s\">Lancez-vous ici</a>."
+msgstr "Prêt·e à publier votre premier article ? <a href=\"%1$s\">Lancez-vous ici</a>."
 
 #: template-parts/content-none.php:13
 msgid "Nothing Found"
@@ -281,8 +283,6 @@ msgstr "Couleur du fond de page"
 msgid "Base Color Scheme"
 msgstr "Jeu de couleurs de base"
 
-#. translators: %s: The current WordPress version.
-#. translators: %s: The current WordPress version.
 #. translators: %s: The current WordPress version.
 #: inc/back-compat.php:45 inc/back-compat.php:62 inc/back-compat.php:85
 msgid "Twenty Sixteen requires at least WordPress version 4.4. You are running version %s. Please upgrade and try again."
