--- a/web/app/languages/fr_FR.po
+++ b/web/app/languages/fr_FR.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the WordPress - 6.7.x - Development package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2025-02-06 14:03:49+0000\n"
+"PO-Revision-Date: 2025-03-25 21:16:32+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -285,6 +285,11 @@ msgstr "janvier"
 #, gp-priority: high
 msgid "Uncategorized"
 msgstr "Non classé"
+
+#. translators: %s: list of allowed collection roots
+#: wp-includes/class-wp-block-metadata-registry.php:127
+msgid "Block metadata collections cannot be registered as one of the following directories or their parent directories: %s"
+msgstr "Les collections de métadonnées de bloc ne peuvent pas être enregistrées dans l’un des répertoires suivants ou dans leurs répertoires parents : %s"
 
 #: wp-includes/theme.json
 msgctxt "Shadow name"
@@ -4218,12 +4223,12 @@ msgstr "Ajoutez de l’espace entre les blocs et personnalisez sa hauteur."
 #: wp-includes/blocks/social-links/block.json
 msgctxt "block style label"
 msgid "Pill Shape"
-msgstr "Forme de pastille"
+msgstr "Pastilles"
 
 #: wp-includes/blocks/social-links/block.json
 msgctxt "block style label"
 msgid "Logos Only"
-msgstr "Uniquement les logos"
+msgstr "Logos"
 
 #: wp-includes/blocks/social-links/block.json
 msgctxt "block description"
@@ -21206,7 +21211,7 @@ msgstr "Restaurer"
 #: wp-includes/js/dist/block-library.js:39513
 #: wp-includes/js/dist/block-library.js:61829
 #: wp-includes/js/dist/block-library.js:63171
-#: wp-includes/js/dist/edit-post.js:3241 wp-includes/js/dist/edit-site.js:24054
+#: wp-includes/js/dist/edit-post.js:3240 wp-includes/js/dist/edit-site.js:24054
 #: wp-includes/js/dist/edit-site.js:24343
 #: wp-includes/js/dist/edit-site.js:33864
 #: wp-includes/js/dist/edit-site.js:39289 wp-admin/comment.php:251
