--- a/web/app/languages/plugins/members-fr_FR.po
+++ b/web/app/languages/plugins/members-fr_FR.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Plugins - Members &#8211; Membership &amp; User Role Editor Plugin - Stable (latest release) package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2025-01-11 22:55:36+0000\n"
+"PO-Revision-Date: 2025-02-28 10:45:07+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,7 +21,7 @@ msgstr "Vous n’êtes pas autorisé autorisé·e à réaliser ces modifications
 
 #: admin/functions-admin.php:261
 msgid "About Us"
-msgstr "À propos"
+msgstr "À propos de nous"
 
 #: admin/class-notifications.php:537
 msgid "You're all caught up!"
@@ -432,7 +432,7 @@ msgstr[1] "GiveWP %s"
 #: admin/class-settings.php:271 admin/class-settings.php:649
 msgctxt "admin screen"
 msgid "About Us"
-msgstr "À propos"
+msgstr "À propos de nous"
 
 #. Author URI of the plugin
 #: members.php
@@ -662,10 +662,6 @@ msgstr "Nécessite une authentification  pour accéder à l API REST."
 msgid "Show human-readable capabilities when possible."
 msgstr "Montrer les droits lisible par l'homme quand c'est possible."
 
-#: admin/views/class-view-general.php:81
-msgid "REST API"
-msgstr "REST API"
-
 #: admin/views/class-view-addons.php:251
 msgid "Some add-ons may require purchase before downloading them. Clicking the purchase button will take you off-site to view the add-on in more detail."
 msgstr "Quelques Add-Ons peuvent nécessiter un achat avant d'être télécharger.  En cliquant sur le bouton Achat, vous serez redirigé hors de ce site pour voir plus de détail sur l'Add-On."
@@ -807,6 +803,10 @@ msgstr "Modifier les thèmes"
 #: inc/functions-capabilities.php:116
 msgid "Delete Roles"
 msgstr "Supprimer des rôles"
+
+#: admin/views/class-view-general.php:81
+msgid "REST API"
+msgstr "API REST"
 
 #: inc/class-widget-users.php:203
 msgid "URL"
